# tabulon

./: .typos.toml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
examples/dxf_viewer/: Cargo.toml
examples/dxf_viewer/src/: main.rs
examples/vello_simple/: Cargo.toml
examples/vello_simple/src/: main.rs
examples/vello_viewer/: Cargo.toml
examples/vello_viewer/src/: main.rs
tabulon/: Cargo.toml  README.md
tabulon/src/: displaylist.rs  floatfuncs.rs  graphics_bag.rs  lib.rs  render_layer.rs  shape.rs  text.rs  transform.rs
tabulon_dxf/: Cargo.toml
tabulon_dxf/src/: aci_palette.rs  lib.rs
tabulon_vello/: Cargo.toml
tabulon_vello/src/: lib.rs
