[package]
name = "tabulon"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for working with canvas-like scenes"
keywords = ["canvas"]
categories = ["graphics"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]
peniko = "0.3.1"
smallvec = "1.13.2"

[dependencies.libm]
version = "0.2.11"
optional = true

[lints]
workspace = true
