[package]
name = "tabulon_dxf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["tabulon/std"]
libm = ["tabulon/libm"]

[dependencies]
dxf = "0.6.0"
uuid = "1.3.3"
getrandom = "0.3.1"
tabulon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.3.3", features = ["rng-rand", "serde", "v4"]}
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[lints]
workspace = true
