[package]
name = "tabulon_vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["tabulon/std"]
libm = ["tabulon/libm"]

[dependencies]
tabulon = { workspace = true }
vello = "0.4.0"

[lints]
workspace = true
