[package]
name = "tabulon_vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["parley/std", "tabulon/std"]
libm = ["parley/libm", "tabulon/libm"]

[dependencies]
parley = { workspace = true }
tracing = { workspace = true }
vello = "0.5.0"

tabulon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parley = { workspace = true, features = ["system"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parley = { workspace = true, default-features = false }

[lints]
workspace = true
