[package]
name = "dxf_viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
tracing-tracy = ["dep:tracing-tracy", "dep:tracy-client"]
tracing-tracy-memory = ["tracing-tracy"]

[dependencies]
anyhow = "1.0.93"
joto_constants = "0.1.1"
pollster = "0.4.0"
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
tracing.workspace = true
tracy-client = { workspace = true, optional = true }
ui-events = "0.1.0"
ui-events-winit = "0.1.0"
vello = "0.5.0"
winit = "0.30.10"

static_aabb2d_index = { version = "2.0.0", features = ["unsafe_optimizations"] }

tabulon = { workspace = true, features = ["std"] }
tabulon_dxf = { workspace = true }
tabulon_vello = { workspace = true }

[lints]
workspace = true
