[package]
name = "vello_viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
vello = "0.4.0"
anyhow = "1.0.93"
pollster = "0.4.0"
winit = "0.30.8"
tabulon = { workspace = true, features = ["std"] }
tabulon_dxf = { workspace = true }


[lints]
workspace = true
