[package]
name = "vello_viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
tracing-tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
anyhow = "1.0.93"
pollster = "0.4.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
tracy-client = { workspace = true, optional = true }
vello = "0.4.0"
winit = "0.30.8"

static_aabb2d_index = { version = "2.0.0", features = ["unsafe_optimizations"] }

tabulon = { workspace = true, features = ["std"] }
tabulon_dxf = { workspace = true }
tabulon_vello = { workspace = true }

[lints]
workspace = true
